--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>Todomvc</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
